bug: mysterious width issues on mobile

--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -43,7 +43,7 @@
 
 .home-page {
   position: block;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   margin-top: 100px;
 }
 
